--- a/src/main/resources/templates/users/join.html
+++ b/src/main/resources/templates/users/join.html
@@ -8,7 +8,6 @@
         table {border: 1px solid black}
         table tr {border: 1px solid black}
         table tr td{border: 1px solid black}
-
     </style>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 </head>
@@ -18,7 +17,7 @@
     <table>
         <tr>
             <td>ID </td>
-            <td><input id="userid" type="text"></td>
+            <td><input id="userid" type="text" value="kim"></td>
         </tr>
         <tr>
             <td>PW</td>
@@ -29,6 +28,7 @@
             <td><input id='name' type="text"></td>
         </tr>
         <tr>
+            
             <td colspan=2>
                 <button id='join-btn'>회원가입</button>
                 <button id='cancel-btn'>취소</button>
@@ -42,26 +42,29 @@
             e.preventDefault()
             alert('회원가입 클릭')
             $.ajax({
-            url: '/users',
-            type: 'POST',
-            data : JSON.stringify({userid: document.getElementById('userId').value,
-                                 password: document.getElementById('password').value,
-                                 name: document.getElementById('name').value}),
-            dataType: 'json',
-            contentType: 'application/json',
-            success: d => {
-                alert(`${d.name} 님 환영합니다`)
-            },
-                
-            error: e => {}
+                url: '/users',
+                type: 'POST',
+                data : JSON.stringify({userid: document.getElementById('userid').value,
+                                       password: document.getElementById('password').value, 
+                                       name: document.getElementById('name').value}),
+                dataType: 'json',
+                contentType: 'application/json',
+                success: d => {
+                    if(d.name === 'FAILURE'){
+                        alert(`회원가입 실패`)
+                    }else{
+                        alert(`${d.name} 가입 성공`)
+                    }
+                },
+                error: e => {
+                    alert(`${e} 을 이유로 전송실패`)
+                }
             })
         })
         document.getElementById('cancel-btn')
         .addEventListener('click', e => {
             alert('취소 클릭')
-
         })
-
     </script>
 </body>
 </html>
